# simple-diceware

./: LICENSE  README.md  pyproject.toml
diceware/: diceware.py
simple_diceware/: simple_diceware.py
