[tool.poetry]
name = "simple-diceware"
version = "0.4.1"
description = "Create diceware passwords from the command line"
readme = "README.md"
repository = "https://github.com/bchopson/simple-diceware"
homepage = "https://github.com/bchopson/simple-diceware"
authors = ["Ben Chopson <bchopson@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.scripts]
diceware = 'simple_diceware.simple_diceware:main'

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
